--- a/core/404.html
+++ b/core/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : core/page.html -->
+<html class="_core_layout" lang="en-US"><!-- page.path   : core/404.html -->
   <!-- page.layout : pugs/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Page | Dove</title><!-- End Jekyll SEO tag -->
+    <title>Not found | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3842"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3841"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -34,7 +34,14 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout _960"><code>// content for : Page</code>
+          <article class="_article _layout _960">
+            <h2>Oops! Nothing found</h2>
+            <p>The content you are looking for is not here.</p>
+            <div style="margin-top:8rem"></div>
+            <hr/>
+            <p><a class="button" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
+<a class="button" href="/dove" title="Go to Home Page">Home</a>
+            </p>
           </article>
         </main>
         <footer class="_footer">
@@ -50,6 +57,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3842"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3841"></script>
   </body>
 </html>
