--- a/nova/index.html
+++ b/nova/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3404"/>
-    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.3404"/>
-    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.3404"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.4924"/>
+    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.4924"/>
+    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.4924"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -46,20 +46,17 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout _960"><p class="hero">Hero statement with <span class="text-red">a red text</span> would be dramatic</p>
+          <article class="_article _layout _960"><p class="hero">Hero statement with <span class="text-red">a red text</span> would be exciting</p>
 
-<h2 id="better-control-over-contents">Better control over contents</h2>
+<h2>Better control over contents</h2>
 
 <p><img src="https://techie-joe.github.io/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml mb" width="400" height="300" /></p>
 
-<p class="text-justify big-first">Writing an article can be exciting when you can add few things here and there. The <code class="language-plaintext highlighter-rouge">big-first</code> class will enlarge the first letter of a paragraph. While <code class="language-plaintext highlighter-rouge">text-justify</code> neatly aligns your text to its container. You can also include images and <a href="#" onclick="event.preventDefault();">hyperlinks</a> to make things more engaging.</p>
+<p class="text-justify big-first">Writing an article can be exciting when you can add few things here and there. The <code class="language-plaintext highlighter-rouge">big-first</code> class will enlarge the first letter of a paragraph. While <code class="language-plaintext highlighter-rouge">text-justify</code> neatly aligns your text to its container. To nudge the first line of a paragraph, use the <code class="language-plaintext highlighter-rouge">indent</code> class. Indentation gives a sense of order and clarity, making an article easier to read. Include images and <a href="#" onclick="event.preventDefault();">hyperlinks</a> to make things more engaging.</p>
 
-<p><strong>Please leave some whitespace between paragraphs.</strong></p>
-
-<p class="text-justify">Use the <code class="language-plaintext highlighter-rouge">indent</code> class to nudge the first line of a paragraph.
-Indentation gives a sense of order and clarity, making an article easier to read.</p>
-
-<p class="indent text-justify text-grey"><strong>You'll notice some gibberish text in this demo.</strong> It's simply a placeholder content, added to give you a sense of how the layout and styling will look. The text itself doesn't carry any meaning — it's just there to fill space and make the design feel more complete. Each time and the channel a different story all with different story, to a pleasure the color of television. A story to honor the color of television the more or less was burnt, in such cases it varies person to another. This happened to the color of television as it differs to another different story.</p>
+<p><strong>Leave whitespace between paragraphs for clarity.</strong></p>
+  
+<p class="indent text-justify text-grey"><strong>You'll notice some gibberish text in this demo.</strong> It's simply placeholder content, added to help you visualize how the layout, spacing, and typography will appear once real content is in place. The text itself doesn't carry any meaning — it's just there to fill the empty areas and make the overall design feel balanced and complete. Each line and section tells a “different story”, though none of it is meant to be understood literally. It's more of a creative illusion — a way to showcase how color, contrast, and structure come together to create a mood. In a sense, it honors the “image of a theme”, a metaphor for how design can shift and vary in perspective. What looks vivid and alive to one viewer might appear muted or abstract to another. That's the beauty of visual design — every layout tells its own silent story, even when the words themselves mean nothing at all.</p>
 
 <blockquote>
   <p>Have a look at <a href="./legacy.html">the legacy</a> for the classic demo page.</p>
@@ -67,24 +64,20 @@ Indentation gives a sense of order and clarity, making an article easier to read
 
 <hr />
 
-<p>There's a horizontal rule above this line.</p>
+<!-- Comment blocks should not appear on the screen. -->
+<!-- {% comment %} Liquid comments should not be rendered. {% endcomment %} -->
 
-<!-- This comment should not appear on the screen. -->
+<p>There's a <strong>horizontal rule</strong> above this sentence, followed by a <strong>comment block</strong>. Comment blocks should not appear on the screen, and Liquid comments should not be rendered.</p>
 
-<p>There's a comment block above this line.</p>
-
-<h3 id="styles-for-text">Styles for text</h3>
+<h3>Styling texts</h3>
 
 <ul>
   <li>
     <p>Text can be
 <strong>bold</strong>,
 <em>italic</em>,
-or <strong><em>both</em></strong>.</p>
-  </li>
-  <li>
-    <p>You can
-<del>strikethrough</del>,
+or <strong><em>both</em></strong>. You can also
+<del>strike</del> some texts,
 or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   </li>
   <li>
@@ -98,32 +91,20 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
     <p>Color them 
 <b class="text-primary">primary</b>
 <b class="text-secondary">secondary</b>
-<b class="text-gray">gray</b>
-<b class="text-slategray">slategray</b>
+<b class="text-pending">pending</b>
 <b class="text-blue">blue</b>
+<b class="text-slategray">slategray</b>
+<b class="text-gray">gray</b>
 <b class="text-green">green</b>
 <b class="text-purple">purple</b>
 <b class="text-red">red</b>
-<b class="text-pending">pending</b>
 <b class="text-orange">orange</b>
 <b class="text-orange-light">orange-light</b>
     .</p>
   </li>
 </ul>
 
-<h3 id="small-image">Small image</h3>
-
-<hr class="mb-3" />
-
-<p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left p-3 bg-white mb-3 mr-3" />
-<img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right p-3 bg-white mb-3 ml-3" />
-<img src="https://techie-joe.github.io/core/images/core-64x64.png" alt="Small image" class="centered p-3 bg-secondary mb-3" /></p>
-
-<hr class="mt-3" />
-
-<p>Align small images with <code class="language-plaintext highlighter-rouge">float-left</code>, <code class="language-plaintext highlighter-rouge">float-right</code> or <code class="language-plaintext highlighter-rouge">centered</code>.</p>
-
-<h3 id="large-image">Large image</h3>
+<h3>Include images</h3>
 
 <p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" class="full-width centered" /></p>
 
@@ -131,35 +112,45 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   <p>Images for this demo came from <a href="https://picsum.photos/" target="_blank">picsum.photos</a>.</p>
 </blockquote>
 
-<p>For a full scale image use the <code class="language-plaintext highlighter-rouge">width-full.centered</code> class.</p>
+<p>Use <code class="language-plaintext highlighter-rouge">width-full.centered</code> class for full-width images.</p>
 
-<h1 id="the-legendary-h1">The Legendary H1</h1>
+<p>Align small images with floats and margins, use <code class="language-plaintext highlighter-rouge">float-left.mr.mb</code>, <code class="language-plaintext highlighter-rouge">float-right.ml.mb</code> or <code class="language-plaintext highlighter-rouge">centered.mb</code>.</p>
+
+<hr class="mb-3" />
+
+<p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb p-3 bg-white" width="64" height="64" />
+<img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb p-3 bg-white" width="64" height="64" />
+<img src="https://techie-joe.github.io/core/images/core-64x64.png" alt="Small image" class="centered mb p-3 bg-secondary" width="64" height="64" /></p>
+
+<hr class="mt-3" />
+
+<h1>The Legendary H1</h1>
 
 <p>Behold, the almighty H1, the king of headings! If a webpage was a burger, H1 would be the top bun — soft, golden, and holding everything together. But don't overuse it. One king per kingdom. Two kings? Chaos. Three kings? That's a Shakespeare play.</p>
 
-<h2 id="the-shy-h2">The Shy H2</h2>
+<h2>The Shy H2</h2>
 
 <p>Ah, the H2. Not too loud, not too small. It's like the middle child of headings: always trying, never crying. H2 organizes sections, but secretly dreams of being an H1 someday. Don't tell it the truth. Let it dream.</p>
 
-<h3 id="mysterious-h3">Mysterious H3</h3>
+<h3>Mysterious H3</h3>
 
 <p>The H3 is like that friend who wears sunglasses indoors. Mysterious. Cool. A bit unnecessary sometimes, but when used right — chef's kiss! H3 loves details and subtopics. But if you go too deep, suddenly you're in H6 territory, and nobody reads that far.</p>
 
-<h4 id="forgotten-h4">Forgotten H4</h4>
+<h4>Forgotten H4</h4>
 
 <p>H4 is like socks at Christmas. Technically useful, but no one really cheers for it. You'll use it if you have to, like adding extra layers to a report nobody asked for. Poor H4. Always invited, never remembered.</p>
 
-<h6 id="tiny-h5">Tiny H5</h6>
+<h6>Tiny H5</h6>
 
 <p>H5 is that tiny notebook you bought to look organized but never actually use. It's small, it's cute, it's there — but honestly, body text is almost the same size, so why bother? H5 knows its fate but accepts it gracefully.</p>
 
-<h6 id="ghostly-h6">Ghostly H6</h6>
+<h6>Ghostly H6</h6>
 
 <p>And then comes H6, the heading so small it whispers. Nobody notices it. Even search engines squint and go, “Wait, is that… a heading?” H6 is like writing a title with invisible ink: only the bravest readers will ever see it.</p>
 
-<h2 id="listing-items">Listing items</h2>
+<h2>Listing items</h2>
 
-<h3 id="ordered-list">Ordered list</h3>
+<h3>Ordered list</h3>
 
 <ol>
   <li>First level item.
@@ -176,7 +167,7 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   <li>The last item.</li>
 </ol>
 
-<h3 id="unordered-list">Unordered list</h3>
+<h3>Unordered list</h3>
 
 <ul>
   <li>First level item.
@@ -193,7 +184,7 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   <li>The last item.</li>
 </ul>
 
-<h3 id="task-list">Task list</h3>
+<h3>Task list</h3>
 
 <ul class="task-list">
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" />Completed task.</li>
@@ -213,9 +204,7 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last task.</li>
 </ul>
 
-<h2 id="definition-list">Definition list</h2>
-
-<p>Use HTML syntax to render the definition list.</p>
+<h3>Definition list</h3>
 
 <dl>
 <dt>Term</dt>
@@ -226,13 +215,13 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 <dd>A programming language that adds interactivity to websites.</dd>
 </dl>
 
-<h3 id="button-link">Button link</h3>
+<h2>Button links</h2>
 
-<p><a href="#" onclick="event.preventDefault();" class="button -l -primary">Primary Button Link</a>
-<a href="#" onclick="event.preventDefault();" class="button -l -flat">Secondary Button Link</a>
-<a href="#" onclick="event.preventDefault();theme.change()" class="button -l -flat" title="Change Theme (Alt+T)">Change Theme</a></p>
+<p><a href="#" onclick="event.preventDefault();" class="button text-primary">Primary Button Link</a>
+<a href="#" onclick="event.preventDefault();" class="button text-secondary">Secondary Button Link</a>
+<a href="#" onclick="event.preventDefault();theme.change()" class="button" title="Change Theme (Alt+T)">Change Theme</a></p>
 
-<h3 id="footnote-link">Footnote link</h3>
+<h2>Footnote links</h2>
 
 <p>A footnote<sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote" rel="footnote">1</a></sup> creates a list of references at the bottom of a page.</p>
 
@@ -488,6 +477,6 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3404"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4924"></script>
   </body>
 </html>
