--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.4923"/><!-- custom-head -->
-    <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.124"/>
+    <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -26,32 +26,21 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout _960"><code>// Dove is a theme development project.</code>
-            <pre class="scrollable">source   : <a href="https://github.com/techie-joe/dove">techie-joe/dove</a>
-site_url : <a class="_no_u" href="/dove">/dove</a>
-home_url : <a class="_no_u" href="/dove">/dove</a>
-version  : 0.0.2.4923
-revision : 33.11.4923
-ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
-google_analytics     : (undefined)
-cloudflare_analytics : (undefined)</pre><code>// Markdowns</code>
+          <article class="_article _layout _960">
+            <h1 class="hero">🕊️ Dove is a theme development project.</h1>
             <nav>
               <ul>
                 <li><a href="home">Home</a>
                 </li>
-              </ul>
-            </nav><code>// Layouts</code>
-            <nav>
-              <ul>
                 <li>
 <a href="/dove/core/">Core</a>
 <i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
+<a href="/dove/core/legacy.html">Legacy</a>
 <a href="/dove/core/home.html">Home</a>
 <a href="/dove/core/page.html">Page</a>
-<a href="/dove/core/legacy.html">Legacy</a>
 <a href="/dove/core/404.html">404</a>
                 </li>
                 <li>
@@ -60,9 +49,9 @@ cloudflare_analytics : (undefined)</pre><code>// Markdowns</code>
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
+<a href="/dove/nova/legacy.html">Legacy</a>
 <a href="/dove/nova/home.html">Home</a>
 <a href="/dove/nova/page.html">Page</a>
-<a href="/dove/nova/legacy.html">Legacy</a>
 <a href="/dove/nova/404.html">404</a>
                 </li>
                 <li>
@@ -71,9 +60,9 @@ cloudflare_analytics : (undefined)</pre><code>// Markdowns</code>
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
+<a href="/dove/mallet/legacy.html">Legacy</a>
 <a href="/dove/mallet/home.html">Home</a>
 <a href="/dove/mallet/page.html">Page</a>
-<a href="/dove/mallet/legacy.html">Legacy</a>
 <a href="/dove/mallet/404.html">404</a>
                 </li>
                 <li>
@@ -82,13 +71,21 @@ cloudflare_analytics : (undefined)</pre><code>// Markdowns</code>
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
+<a href="/dove/primer/legacy.html">Legacy</a>
 <a href="/dove/primer/home.html">Home</a>
 <a href="/dove/primer/page.html">Page</a>
-<a href="/dove/primer/legacy.html">Legacy</a>
 <a href="/dove/primer/404.html">404</a>
                 </li>
               </ul>
             </nav>
+            <pre class="scrollable">source   : <a href="https://github.com/techie-joe/dove">techie-joe/dove</a>
+version  : 0.0.2.124
+revision : 33.14.124
+site_url : <a class="_no_u" href="/dove">/dove</a>
+home_url : <a class="_no_u" href="/dove">/dove</a>
+ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
+google_analytics     : (undefined)
+cloudflare_analytics : (undefined)</pre>
           </article>
         </main>
         <footer class="_footer">
@@ -104,6 +101,6 @@ cloudflare_analytics : (undefined)</pre><code>// Markdowns</code>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4923"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.124"></script>
   </body>
 </html>
