--- a/primer/preview.html
+++ b/primer/preview.html
@@ -1,51 +1,18 @@
 <!DOCTYPE html>
-<html class="_nova_layout" lang="en-US"><!-- page.path   : core/index.html -->
-  <!-- page.layout : pugs/nova -->
+<html class="_primer_layout" lang="en-US"><!-- page.path   : primer/preview.html -->
+  <!-- page.layout : pugs/primer -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Core | Dove</title><!-- End Jekyll SEO tag -->
+    <title>Primer Preview | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta id="_color_scheme" name="color-scheme" content="light dark"/>
+    <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.125"/>
-    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.125"/>
-    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.125"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.5228"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <div class="_views">
-      <div class="_view">
-        <header class="_header">
-          <div class="_layout">
-            <div class="flex">
-              <div class="fill">
-                <div class="_logo"><a href="/dove">Dove</a>
-                </div>
-              </div>
-              <div class="fit">
-                <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
-                        <svg viewBox="0 0 24 24">
-                          <path d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z" fill="currentColor" fill-opacity="1"></path>
-                        </svg></i></i></a></div>
-              </div>
-            </div>
-          </div>
-        </header>
-        <nav class="_nav">
-          <div class="_layout _960">
-<a href="/dove/nova/">Nova</a>
-<i class="_icon"><i class="isvg">
-                <svg viewBox="0 0 24 24">
-                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                </svg></i></i>
-<a href="/dove/nova/legacy.html">Legacy</a>
-<a href="/dove/nova/home.html">Home</a>
-<a href="/dove/nova/page.html">Page</a>
-<a href="/dove/nova/404.html">404</a>
-          </div>
-        </nav>
-        <main class="_main">
-          <article class="_article _layout _960"><p class="hero">Hero statement with <span class="text-red">a red text</span> would be exciting</p>
+    <div class="container-lg px-3 my-5 markdown-body">
+      <h1><a href="/dove">Dove</a></h1><p class="hero">Hero statement with <span class="text-red">a red text</span> would be exciting</p>
 
 <h1>Heading 1</h1>
 
@@ -189,16 +156,13 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
       <li>Second level item.
         <ol style="list-style:lower-roman">
           <li>Third level item.</li>
-          <li>Other item.</li>
-          <li>Last item.</li>
+          <li>The last item.</li>
         </ol>
       </li>
-      <li>Other item.</li>
-      <li>Last item.</li>
+      <li>The last item.</li>
     </ol>
   </li>
-  <li>Other item.</li>
-  <li>Last item.</li>
+  <li>The last item.</li>
 </ol>
 
 <h3>Unordered list</h3>
@@ -209,16 +173,13 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
       <li>Second level item.
         <ul>
           <li>Third level item.</li>
-          <li>Other item.</li>
-          <li>Last item.</li>
+          <li>The last item.</li>
         </ul>
       </li>
-      <li>Other item.</li>
-      <li>Last item.</li>
+      <li>The last item.</li>
     </ul>
   </li>
-  <li>Other item.</li>
-  <li>Last item.</li>
+  <li>The last item.</li>
 </ul>
 
 <h3>Task list</h3>
@@ -231,14 +192,14 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Second level.
         <ul class="task-list">
           <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" />Third level.</li>
-          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Other item.</li>
-          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last item.</li>
+          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Third level.</li>
+          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Third level.</li>
         </ul>
       </li>
-      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last item.</li>
+      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Second level.</li>
     </ul>
   </li>
-  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last item.</li>
+  <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last task.</li>
 </ul>
 
 <h2>Definition list</h2>
@@ -466,17 +427,18 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
     </li>
   </ol>
 </div>
-          </article>
-        </main>
-        <footer class="_footer">
-          <div class="_layout _960"><code>// by Techie Joe 2025</code>
-          </div>
-        </footer>
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
+        <p><code>// by Techie Joe 2025</code></p>
+        <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/primer/preview.html.pug">Improve this page</a>.</p>
       </div>
-    </div><!-- custom-body -->
+    </div>
+    <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
+            <svg viewBox="0 0 24 24">
+              <path d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z" fill="currentColor" fill-opacity="1"></path>
+            </svg></i></i></a></div><!-- custom-body -->
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.125"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5228"></script>
   </body>
 </html>
