--- a/core/404.html
+++ b/core/404.html
@@ -8,8 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.4923"/><!-- custom-head -->
-    <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.124"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -27,9 +26,9 @@
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
+<a href="/dove/core/legacy.html">Legacy</a>
 <a href="/dove/core/home.html">Home</a>
 <a href="/dove/core/page.html">Page</a>
-<a href="/dove/core/legacy.html">Legacy</a>
 <a href="/dove/core/404.html">404</a>
           </div>
         </nav>
@@ -39,8 +38,8 @@
             <p>The content you are looking for is not here.</p>
             <div style="margin-top:8rem"></div>
             <hr/>
-            <p><a class="button" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
-<a class="button" href="/dove" title="Go to Home Page">Home</a>
+            <p><a href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
+<a href="/dove" title="Go to Home Page">Home</a>
             </p>
           </article>
         </main>
@@ -57,6 +56,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4923"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.124"></script>
   </body>
 </html>
