--- a/primer/404.html
+++ b/primer/404.html
@@ -8,15 +8,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.4924"/><!-- custom-head -->
-    <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.125"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="/dove">Dove</a></h1>
-      <h2>Oops! Nothing found</h2>
-      <p>The content you are looking for is not here.</p>
-      <div style="margin-top:8rem"></div>
+      <div class="flex">
+        <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
+        <div class="f" style="padding:0 1rem">
+          <h2>Oops! Nothing found</h2>
+          <p>The content you are looking for is not here.</p>
+        </div>
+      </div>
+      <div style="margin-top:3rem"></div>
       <hr/>
       <p><a href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
 <a href="/dove" title="Go to Home Page">Home</a>
@@ -33,11 +37,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4924"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
-    <script>
-      anchors?.add();
-      
-    </script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.125"></script>
   </body>
 </html>
