update core and primer

--- a/nova/index.html
+++ b/nova/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.125"/>
-    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.125"/>
-    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.125"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.1044"/>
+    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.1044"/>
+    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.1044"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -76,7 +76,7 @@
 <strong>bold</strong>,
 <em>italic</em>,
 or <strong><em>both</em></strong>. You can also
-<del>strike</del> some texts,
+<del>strikethrough</del> texts,
 or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   </li>
   <li>
@@ -99,6 +99,7 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 <b class="text-red">red</b>
 <b class="text-orange">orange</b>
 <b class="text-orange-light">orange-light</b>
+<b class="text-yellow">yellow</b>
     .</p>
   </li>
 </ul>
@@ -153,31 +154,31 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <hr class="mb-3" />
 
-<p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb p-3 bg-white" width="64" height="64" />
-<img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb p-3 bg-white" width="64" height="64" />
-<img src="https://techie-joe.github.io/core/images/core-64x64.png" alt="Small image" class="centered mb p-3 bg-secondary" width="64" height="64" /></p>
+<p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb pa bg-white" width="64" height="64" />
+<img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb pa bg-white" width="64" height="64" />
+<img src="https://techie-joe.github.io/core/images/core-64x64.png" alt="Small image" class="centered mb pa bg-secondary" width="64" height="64" /></p>
 
 <hr class="mt-3" />
 
 <h2>Heading 2</h2>
 
-<p>Not too loud, not too small. It's like the middle child of headings: always trying, never crying. H2 organizes sections, but secretly dreams of being an H1 someday. Don't tell it the truth. Let it dream.</p>
+<p class="text-grey">Not too loud, not too small. It's like the middle child of headings: always trying, never crying. H2 organizes sections, but secretly dreams of being an H1 someday. Don't tell it the truth. Let it dream.</p>
 
 <h3>Heading 3</h3>
 
-<p>The Mysterious H3 is like that friend who wears sunglasses indoors. Mysterious. Cool. A bit unnecessary sometimes, but when used right — chef's kiss! H3 loves details and subtopics. But if you go too deep, suddenly you're in H6 territory, and nobody reads that far.</p>
+<p class="text-grey">The Mysterious H3 is like that friend who wears sunglasses indoors. Mysterious. Cool. A bit unnecessary sometimes, but when used right — chef's kiss! H3 loves details and subtopics. But if you go too deep, suddenly you're in H6 territory, and nobody reads that far.</p>
 
 <h4>Heading 4</h4>
 
-<p>H4 is forgotten like socks at Christmas. Technically useful, but no one really cheers for it. You'll use it if you have to, like adding extra layers to a report nobody asked for. Poor H4. Always invited, never remembered.</p>
+<p class="text-grey">H4 is forgotten like socks at Christmas. Technically useful, but no one really cheers for it. You'll use it if you have to, like adding extra layers to a report nobody asked for. Poor H4. Always invited, never remembered.</p>
 
 <h6>Heading 5</h6>
 
-<p>H5 is that tiny notebook you bought to look organized but never actually use. It's small, it's cute, it's there — but honestly, body text is almost the same size, so why bother? H5 knows its fate but accepts it gracefully.</p>
+<p class="text-grey">H5 is that tiny notebook you bought to look organized but never actually use. It's small, it's cute, it's there — but honestly, body text is almost the same size, so why bother? H5 knows its fate but accepts it gracefully.</p>
 
 <h6>Heading 6</h6>
 
-<p>And then comes H6, the heading so small it whispers. Nobody notices it. Even search engines squint and go, “Wait, is that… a heading?” H6 is like writing a title with invisible ink: only the bravest readers will ever see it.</p>
+<p class="text-grey">And then comes H6, the heading so small it whispers. Nobody notices it. Even search engines squint and go, “Wait, is that… a heading?” H6 is like writing a title with invisible ink: only the bravest readers will ever see it.</p>
 
 <h2>Listing items</h2>
 
@@ -273,7 +274,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <p class="box text-center">Wrap texts in a <code class="language-plaintext highlighter-rouge">box</code></p>
 
-<p class="bg-primary text-white box text-center">Wrapped in <code class="language-plaintext highlighter-rouge">bg-primary.text-white.box</code></p>
+<p class="bg-primary text-white box text-center">Wrap in <code class="language-plaintext highlighter-rouge">bg-primary.text-white.box</code></p>
 
 <p class="bg-red text-white box text-center">Try other mix as well</p>
 
@@ -432,8 +433,8 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
           <dd>And its description.</dd>
           </dl>
       </td>
-      <td class="text-center">Good</td>
-      <td class="text-right">$78,910.12</td>
+      <td class="text-center text-green">Good</td>
+      <td class="text-right text-green">$78,910.12</td>
   </tr>
   <tr>
       <td class="text-left">
@@ -442,8 +443,8 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
           <dd>And its description.</dd>
           </dl>
       </td>
-      <td class="text-center"><span class="text-pending">Pending</span></td>
-      <td class="text-right"><span class="text-pending">- ($1,234.56)</span></td>
+      <td class="text-center text-pending">Pending</td>
+      <td class="text-right text-red">- ($1,234.56)</td>
   </tr>
 </tbody>
 </table>
@@ -477,6 +478,6 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.125"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1044"></script>
   </body>
 </html>
