--- a/index.html
+++ b/index.html
@@ -1,97 +1,81 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : index.html -->
-  <!-- page.layout : pugs/core -->
+<html class="_prime_layout" lang="en-US"><!-- page.path   : index.html -->
+  <!-- page.layout : pugs/prime -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>Index | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta id="_color_scheme" name="color-scheme" content="light dark"/>
+    <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3857"/>
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.1513"/>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <div class="_views">
-      <div class="_view">
-        <header class="_header">
-          <div class="_layout">
-            <div class="_logo"><span class="_pointer">Dove</span>
-            </div>
-          </div>
-        </header>
-        <nav class="_nav">
-          <div class="_layout _960">
-            <style>._nav { display:none !important }</style>
-          </div>
-        </nav>
-        <main class="_main">
-          <article class="_article _layout _960">
-            <h1 class="hero">🕊️ Dove is a theme development project.</h1>
-            <nav>
-              <ul>
-                <li><a href="home">Home</a>
-                </li>
-                <li>
+    <div class="container-lg px-3 my-5 markdown-body">
+      <h1><a href="/dove">Dove</a></h1>
+      <h1 class="hero">🕊️ Dove is a theme development project.</h1>
+      <nav>
+        <ul>
+          <li><a href="home">Home</a>
+          </li>
+          <li>
 <a href="/dove/core/">Core</a>
 <i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i>
+                <svg viewBox="0 0 24 24">
+                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                </svg></i></i>
 <a href="/dove/core/legacy.html">Legacy</a>
 <a href="/dove/core/home.html">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
-                </li>
-                <li>
+          </li>
+          <li>
 <a href="/dove/nova/">Nova</a>
 <i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i>
+                <svg viewBox="0 0 24 24">
+                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                </svg></i></i>
 <a href="/dove/nova/legacy.html">Legacy</a>
 <a href="/dove/nova/home.html">Home</a>
 <a href="/dove/nova/page.html">Page</a>
 <a href="/dove/nova/404.html">404</a>
-                </li>
-                <li>
+          </li>
+          <li>
 <a href="/dove/mallet/">Mallet</a>
 <i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i>
+                <svg viewBox="0 0 24 24">
+                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                </svg></i></i>
 <a href="/dove/mallet/legacy.html">Legacy</a>
 <a href="/dove/mallet/home.html">Home</a>
 <a href="/dove/mallet/page.html">Page</a>
 <a href="/dove/mallet/404.html">404</a>
-                </li>
-                <li>
+          </li>
+          <li>
 <a href="/dove/prime/">Prime</a>
 <i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i>
+                <svg viewBox="0 0 24 24">
+                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                </svg></i></i>
 <a href="/dove/prime/legacy.html">Legacy</a>
 <a href="/dove/prime/home.html">Home</a>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
-                </li>
-              </ul>
-            </nav>
-            <pre class="scrollable">source   : <a href="https://github.com/techie-joe/dove">techie-joe/dove</a>
-version  : 0.0.2.3857
-revision : 33.9.3857
+          </li>
+        </ul>
+      </nav>
+      <pre class="scrollable">source   : <a href="https://github.com/techie-joe/dove">techie-joe/dove</a>
+version  : 0.0.2.1513
+revision : 33.10.1513
 site_url : <a class="_no_u" href="/dove">/dove</a>
 home_url : <a class="_no_u" href="/dove">/dove</a>
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
 google_analytics     : (undefined)
 cloudflare_analytics : (undefined)</pre>
-          </article>
-        </main>
-        <footer class="_footer">
-          <div class="_layout _960"><code>// by Techie Joe 2025</code>
-          </div>
-        </footer>
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
+        <p><small class="mono">// by Techie Joe 2025</small></p>
+        <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug">Improve this page</a>.</p>
       </div>
     </div>
     <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
@@ -101,6 +85,6 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3857"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1513"></script>
   </body>
 </html>
