update base helper

--- a/nova/index.html
+++ b/nova/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.1514"/>
-    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.1514"/>
-    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.1514"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.1200"/>
+    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.1200"/>
+    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.1200"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -272,11 +272,11 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <h2>Box wrappers</h2>
 
-<p class="box text-center">Wrap texts in a <code class="language-plaintext highlighter-rouge">box</code></p>
+<p class="box ba text-center">Wrap texts in a <code class="language-plaintext highlighter-rouge">box.ba</code></p>
 
-<p class="bg-primary text-white box text-center">Wrap in <code class="language-plaintext highlighter-rouge">bg-primary.text-white.box</code></p>
+<p class="box bg-primary text-white text-center">Wrap in <code class="language-plaintext highlighter-rouge">box.bg-primary.text-white</code></p>
 
-<p class="bg-red text-white box text-center">Try other mix as well</p>
+<p class="box bg-red text-white text-center">Try other mix as well</p>
 
 <h2>Details and summary</h2>
 
@@ -289,8 +289,8 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 </div>
 </details>
 
-<details class="box">
-<summary>Style them with <code>box</code> wrappers. <i>(click for more)</i></summary>
+<details class="box ba">
+<summary>Style them with <code>box.ba</code> wrappers. <i>(click for more)</i></summary>
 <div class="details">
 <p class="text-grey text-justify">This block expands like curtains on opening night, then folds back up as if nothing ever happened, gaslighting your memory of what you just saw. Authors toss long-winded explanations, secret Easter eggs, or poorly formatted cat ASCII art inside it, knowing only the brave will click. In its most chaotic form, the details block nests within itself, collapsing collapsibles within collapsibles until the reader spirals into an abyss of disclosure toggles, wondering whether the summary is summary enough to summarize the summaries.</p>
 </div>
@@ -479,6 +479,6 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1514"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1200"></script>
   </body>
 </html>
